#97 fix it