@@ -130,9 +130,6 @@
 							<excludes>
 								<exclude>**/*IT.java</exclude>
 							</excludes>
-							<forkCount>1</forkCount>
-							<reuseForks>false</reuseForks>
-							<runOrder>alphabetical</runOrder>
 						</configuration>
 					</plugin>
 					<plugin>
@@ -159,6 +156,11 @@
 							<includes>
 								<include>**/*IT.java</include>
 							</includes>
+							<forkCount>1</forkCount>
+							<reuseForks>false</reuseForks>
+							<runOrder>alphabetical</runOrder>
+							<skipAfterFailureCount>1</skipAfterFailureCount>
+							<argLine>-Xmx2048m -Xms1024m -XX:MaxPermSize=512m -XX:-UseGCOverheadLimit @{argLine}</argLine>
 						</configuration>
 					</plugin>
 				</plugins>
